--- a/index.html
+++ b/index.html
@@ -2148,4 +2148,10 @@ I'm a motherfuckin' starboy
 Look what you've done
 I'm a motherfuckin' starboy
 	</p>
+
+<audio autoplay loop>
+		<source src="music.mp3" type="audio/mp3">
+		Your browser does not support the audio element.
+	</audio>
+
 </body>
